@startuml

title __TODOC's Class Diagram__\n

  namespace com.cleanup.todoc {
    class com.cleanup.todoc.MyApplication {
        {static} - sApplication : Application
        {static} + getInstance()
        + onCreate()
    }
  }
  

  namespace com.cleanup.todoc {
    class com.cleanup.todoc.ViewModelFactory {
        {static} - factory : ViewModelFactory
        + create()
        {static} + getInstance()
        - ViewModelFactory()
    }
  }
  

  com.cleanup.todoc.MyApplication -up-|> android.app.Application
  com.cleanup.todoc.ViewModelFactory .up.|> androidx.lifecycle.ViewModelProvider.Factory
  com.cleanup.todoc.ViewModelFactory o-- com.cleanup.todoc.repository.Repository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
